2014-11-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_incidents.php: Fixed the count of the tickets
	on the search list.

2014-10-31  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_incidents.php: Fixed the count of the tickets
	on the function "filter_incidents". Fixed the pagination of the
	ticket search on the function "incidents_search_result".
	
2014-10-31  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_graph.php
	  include/functions_groups.php
	  operation/inventories/inventory_reports.php: Ticket #1516,
	Ticket #1518.

2014-10-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/side_menu.php: Fixed style. Ticket #1515.

2014-10-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/inventories/inventory_reports.php: Ticket #1515.

2014-10-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/wiki/lionwiki_lib.php: Ticket #1168.

2014-10-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  extras/mr/14.sql
	  godmode/usuarios/configurar_usuarios.php
	  include/functions.php
	  include/functions_db.php
	  include/functions_form.php
	  include/functions_groups.php
	  operation/side_menu.php
	  operation/incidents/incident_detail.php
	  operation/inventories/inventory_reports.php
	  operation/inventories/inventory_reports_detail.php: Fixed
	several bugs #1497, #1255, #1488, #1486, #1453, #1451, #1399.

2014-10-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_demo.sql
	  extras/mr/13.sql
	  include/functions_db.php
	  operation/projects/task_detail.php: Fixed
	bug #1217. Added field "CC" to task detail.

2014-10-16  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/main_menu.php: Now the 'Custom screens' item
	doesn't appear when there aren't custom screens with the
	'show on menu' option enabled.

2014-10-16  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php: Fixed many errors on the